--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\pdon1\AppData\Local\atom\app-1.60.0\images\rqIx8T.jpg"></td>
+      <td><img src="images\rqIx8T.jpg"></td>
       <td>
         <h1>Perry Robertson</h1>
         <p><em>Software Engineer for <strong><a href="https://appbrewery.com/">The App Brewery</a></strong></em></p>
